# SMKP

./: AUTHORS  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
data/: README.md
results/: README.md  SMKP_detailed-results.xlsx
src/: cli_parse.c  cli_parse.h  compactModel.cpp  compactModel.h  data_structs.c  data_structs.h  instance.c  instance.h  item.c  item.h  labelSetting.cpp  labelSetting.h  macros.h  main.cpp  ts_config.h  ts_heur.c  ts_heur.h
